--- a/en/contact.html
+++ b/en/contact.html
@@ -129,7 +129,7 @@
   </div>
 
   <div class="slogan-box">
-    <p class="contact-slogan">contact me — let’s craft your brand’s story together</p>
+    <p class="contact-slogan">text me and we'll create your brand story together</p>
   </div>
 </main>
 
